potential fix to card layout issues

--- a/src/style/ClueCard.css
+++ b/src/style/ClueCard.css
@@ -323,3 +323,8 @@ button:hover {
 .clue-instruction {
  margin-bottom: 30px;
 }
+
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
